objects/wkitsm__RequestMenu__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__ItemCount__c</fullName>
        <label>Item Count</label>
        <summaryForeignKey>wkitsm__RequestMenuAssociation__c.wkitsm__RequestMenu__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Request Menu</label>
    <listViews>
        <fullName>wkitsm__All</fullName>
        <columns>NAME</columns>
        <columns>wkitsm__Description__c</columns>
        <columns>wkitsm__ItemCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Request Menu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Menus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>